# Sift

./: .gitignore  README.md  pyproject.toml
sift/: __init__.py  __main__.py  app.py  controller.py  models.py  state.py
sift/fs/: __init__.py  classify.py  metadata.py  scanner.py
sift/platform/: __init__.py  macos.py
sift/preview/: __init__.py  loader.py  structured.py  text.py
sift/ui/: __init__.py  browser_pane.py  inspect_pane.py  layout.py  preview_pane.py  status_bar.py
tests/: test_classify.py  test_cli.py  test_controller_navigation.py  test_preview_structured.py  test_preview_text.py  test_scanner.py
